fix: Adjust margin-top to -3px for keyframe track alignment

--- a/src/App.css
+++ b/src/App.css
@@ -2821,7 +2821,7 @@ input[type="checkbox"] {
   width: 100%;
   box-sizing: border-box;
   /* Align with left column */
-  margin-top: -5px;
+  margin-top: -3px;
   padding: 0;
 }
 
